# src/Controller/MailerController.php
@@ -22,10 +22,7 @@ class MailerController extends AbstractController
     #[Route('/email')]
     public function sendEmail(MailerInterface $mailer,SavingMailRepository $savingMailRepository,EntityManagerInterface $entityManager,$user_id,$email,$user)
     {
-        // $user = $this -> getUser();
          $user_email = $user -> getEmail();
-        // $user_id = $user -> getId();
-        //dd($user_email);
         $saving_mail = new SavingMail();
         $email = (new TemplatedEmail())
             ->from('Commet-AT@example.com')
@@ -61,5 +58,45 @@ class MailerController extends AbstractController
             }             
             $entityManager->persist($saving_mail);
             $entityManager->flush();
+    }
+
+
+    public function sendReferralToEmail(EntityManagerInterface $entityManager,MailerInterface $mailer,$email_to_client,$email_user,$referral_link,$personal_code,$savingMailRepository,$user_id,$username)
+    {
+        $saving_mail = new SavingMail();
+        $email = (new TemplatedEmail())
+            ->from($email_user)
+            ->to($email_to_client)
+            ->subject('Time for Symfony Mailer!')
+            ->htmlTemplate('emails/initiation.html.twig')
+            ->context([
+                'username' => $username,
+                'personal_code' => $personal_code,
+                'date' => new \DateTime(),
+                'referral_link' => $referral_link,
+            ]);
+            $saving_mail -> setCategory('referral_link');
+            $saving_mail -> setUserId($user_id);
+            $saving_mail -> setToMail($email_to_client);
+            $saving_mail -> setFromMail($email_user);
+            $saving_mail -> setText('http://164.92.159.123/register/'.$referral_link);
+            $saving_mail -> setCreatedAt((new \DateTime()));
+            $saving_mail -> setUpdatedAt((new \DateTime()));
+            try {
+                $mailer->send($email);
+                $this->addFlash(
+                'success',
+                'You have successfully sent a referral link to a new candidate!');
+                $saving_mail -> setStatus('success');
+                $savingMailRepository -> add($saving_mail);     
+            } catch (TransportExceptionInterface $e) {
+                $this->addFlash(
+                    'success',
+                    'An unexpected failure of the mail client occurred, the link could not be sent, please try again later.');
+                $saving_mail -> setStatus('error');
+                $savingMailRepository -> add($saving_mail);         
+            } 
+            $entityManager->persist($saving_mail);
+            $entityManager->flush();            
     }
 }
